--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview",
-    "deploy": "npm run build && cp -r dist/* /var/www/html/rentmycar"
+    "serve": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
