--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "postbuild": "cp -r dist/* /var/www/html/"
   },
   "dependencies": {
     "react": "^18.2.0",
