AutoCAR Agent: REN-86 - Rebuild UI: Create a Simple Home Page

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "postbuild": "cp -r dist/* /var/www/html/"
+    "postbuild": "cp -r dist/* /var/www/html/rentmycar"
   },
   "dependencies": {
     "react": "^18.2.0",
